<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">smsforall.org</string>

    <string name="default_notification_channel_id" translatable="false">Channel ID</string>

    <!-- SMS Permissions Strings -->
    <string name="label_permissions">Permissions</string>
    <string name="label_permissions_message">For this application to work properly it is necessary to grant the requested permissions.</string>
    <string name="label_permissions_message_mandatory">For this application to work properly it is necessary to grant the requested permissions. Please enable this in your application settings.</string>

    <!-- Add Device -->
    <string name="label_enter_activation_pin_message">Enter the activation pin of the new devise (Get a PIN from https://app.smsforall.org)</string>
    <string name="label_continue">Continue</string>
    <string name="label_enter_pin">Enter pin</string>
    <string name="label_sms_successfully_validated">You will shortly receive an SMS confirming the status of the device</string>
    <string name="label_sms_successfully_activated">The device was activated correctly, enjoy smsforall.org</string>
    <string name="error_invalid_device">The code is invalid or the device has been previously activated</string>
    <string name="error_invalid_pin">An error occurred when validating the pin</string>
    <string name="label_return">Return</string>
    <string name="label_sending_test_sms">Sending test SMS</string>
    <string name="label_processing_notifications">Managing notifications</string>
    <string name="label_activate_device_error_message">An error occurred when validating the device, please check that the device is connected to a valid telephone network and that it has an SMS sending plan</string>
    <string name="label_activate_device_error_message_suggest">In case you receive the error more than twice, we suggest you uninstall and reinstall the application</string>
    <string name="label_try_again">Try again</string>
</resources>